-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.301 2008-05-23 04:00:38 guru Exp $
-----------------------------------------------------------------------------------------
2005-05-22	pwessel
	* gmt_map.c, gmt_init.c:	Added support for enhanced -E option for 3-D perspective
				views which allows the specification of a fixed point (needed for
				creating animations)

2005-05-20	pwessel
	* gmt_io.c:		Did not properly apply PLOT_DEGREE_FORMAT=ddd.x for decimal degrees
	* gmt_map.c:		Determining where parallels and meridians intersected the map
				boundary where susceptible to roundoff for very small regions
	* gmt_plot.c:		Checked for map jumps even for non-periodic map boundaries.

2005-05-19	pwessel
	* pscoast.c:		The -Q option should not require -J
	* pstext.c:		Cannot remote blank lines when in paragraph mode as those
				lines signal the end of each paragraph.
2005-05-18	remko
	* configure.ac:		Version updated to 4.3.2. Added CVS_VERSION switch.
	* src/gmt_version.h.in:	Add date and time to CVS version string.

-----------------------------------------------------------------------------------------
2008-05-15
	* tar 4.3.1 made and released via email
-----------------------------------------------------------------------------------------

2005-05-15	pwessel
	* xyz2grd.c:		The -S option incorrectly insisted that -G needed to be set.
	
2005-05-12	remko
	* conf/gmtdefaults_{SI,US}.in:	Renamed from .gmtdefaults_* (no longer hidden)
	* configure.ac, gmt_init.c:	Changed accordingly
	* Makefile:		"make install-data" now copies only the appropriate directories
				and file from the share directory, i.e. not CVS directory, and
				.cvsignore and *.in files.
	* src/makefile:		Link libgmtps.$(SL) and libpsl.$(SL) to appropriate libraries.
	* src/x2sys/makefile:	No need for linking libx2sys.$(SL) against netCDF.

2005-05-12	pwessel
	* <suppl>/*.c:		Some supplement programs had a mix of GMT_fopen and fread